@@ -1,5 +1,10 @@
 2007-01-26  Dennis Cranston  <dennis_cranston@yahoo.com>
 
+	* gsearchtool-callbacks.c: (move_to_trash_cb): Fix bug #395381,
+	cannot delete filenames containing %21 from the search window.
+
+2007-01-26  Dennis Cranston  <dennis_cranston@yahoo.com>
+
 	* gsearchtool-callbacks.c: (move_to_trash_cb): Fix bug #397945,
 	cursor goes away from found files list when deleting a file.
 
